--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,6 +2,7 @@
   <app-sidebar></app-sidebar>
   <div class="main-content">
     <app-header></app-header>
-    <app-dashboard></app-dashboard>
+    <router-outlet></router-outlet>
   </div>
 </div>
+
