--- a/src/app/sidebar/sidebar.html
+++ b/src/app/sidebar/sidebar.html
@@ -11,13 +11,28 @@
   
   <nav class="nav-menu">
     @for (item of menuItems; track item.name) {
-      <div class="nav-item" [class.active]="item.active">
-        <mat-icon>{{item.icon}}</mat-icon>
-        <span class="nav-text">{{item.name}}</span>
-        @if (item.hasSubmenu) {
-          <mat-icon class="arrow">keyboard_arrow_down</mat-icon>
+      @if (item.hasSubmenu) {
+        <div class="nav-item" [class.active]="item.expanded" (click)="toggleSubmenu(item)">
+          <mat-icon>{{item.icon}}</mat-icon>
+          <span class="nav-text">{{item.name}}</span>
+          <mat-icon class="arrow" [class.rotated]="item.expanded">keyboard_arrow_down</mat-icon>
+        </div>
+        @if (item.expanded && item.subItems) {
+          <div class="submenu">
+            @for (subItem of item.subItems; track subItem.name) {
+              <a class="submenu-item" [routerLink]="subItem.route" routerLinkActive="active">
+                <mat-icon>radio_button_unchecked</mat-icon>
+                <span>{{subItem.name}}</span>
+              </a>
+            }
+          </div>
         }
-      </div>
+      } @else {
+        <a class="nav-item" [routerLink]="item.route" routerLinkActive="active">
+          <mat-icon>{{item.icon}}</mat-icon>
+          <span class="nav-text">{{item.name}}</span>
+        </a>
+      }
     }
   </nav>
 </div>
