--- a/src/app/sidebar/sidebar.html
+++ b/src/app/sidebar/sidebar.html
@@ -1,11 +1,7 @@
 <div class="sidebar">
   <div class="logo-container">
     <div class="logo">
-      <span class="logo-icon">&#9729;</span>
-      <div class="logo-text">
-        <span class="logo-title">apachecloudstack</span>
-        <span class="logo-subtitle">open source cloud computing</span>
-      </div>
+      <img class="logo" src="logo.png" alt="" />
     </div>
   </div>
 
