--- a/src/app/components/dashboard/dashboard.scss
+++ b/src/app/components/dashboard/dashboard.scss
@@ -71,7 +71,7 @@
     display: flex;
     align-items: center;
     padding: 16px;
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid #151515;
 
     mat-icon[mat-card-avatar] {
       background: #1e88e5;
@@ -79,11 +79,12 @@
       padding: 8px;
       border-radius: 4px;
       margin-right: 12px;
+      font-size: 1.8rem;
     }
 
     mat-card-title {
-      font-size: 14px;
-      font-weight: 600;
+      font-size: 1.2rem;
+      font-weight: 500;
       color: #333;
       margin: 0;
     }
@@ -96,7 +97,7 @@
 
 .infrastructure-card {
   // background-color: rgba(248, 40, 90, 0.20);
-  background-color: rgb(222 250 247);
+  // background-color: rgb(222 250 247);
   .infra-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -129,7 +130,7 @@
 }
 
 .compute-card {
-  background-color: rgb(233 222 250);
+  // background-color: rgb(233 222 250);
   mat-card-header {
     .capacity-btn {
       margin-left: auto;
@@ -145,11 +146,11 @@
 }
 
 .storage-card {
-  background-color: rgb(250 222 225);
+  // background-color: rgb(250 222 225);
 }
 
 .network-card {
-  background-color: rgb(239 250 222);
+  // background-color: rgb(239 250 222);
 }
 
 .resource-item,
@@ -213,7 +214,7 @@
 }
 
 .alerts-card {
-  background-color: rgb(248 222 250);
+  // background-color: rgb(248 222 250);
   mat-card-header {
     .alert-icon {
       background: #f44336 !important;
@@ -273,7 +274,7 @@
 }
 
 .events-card {
-  background-color:rgb(222 246 250);
+  // background-color: rgb(222 246 250);
   mat-card-header {
     mat-icon[mat-card-avatar] {
       background: #9c27b0 !important;
