--- a/src/app/layout/sidebar/sidebar.scss
+++ b/src/app/layout/sidebar/sidebar.scss
@@ -14,7 +14,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.3);
+    // background: rgba(255, 255, 255, 0.3);
     border-radius: 2px;
   }
 }
@@ -48,7 +48,7 @@
   margin: 0px 5px;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #2e91e77a;
   }
 
   &.active {
@@ -79,9 +79,9 @@
   }
 }
 
-.submenu {
-  background-color: rgba(0, 0, 0, 0.15);
-}
+// .submenu {
+//   background-color: rgba(0, 0, 0, 0.15);
+// }
 
 .submenu-item {
   display: flex;
@@ -91,11 +91,11 @@
   transition: background-color 0.2s;
   gap: 8px;
   text-decoration: none;
-  color: white;
+  color: rgb(22, 22, 22);
   font-size: 12px;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #2e91e77a;
   }
 
   &.active {
